Fix sidebar toggle visibility by adding centering properties in mobile view

--- a/map.css
+++ b/map.css
@@ -1142,6 +1142,8 @@ header span.subtitle {
     position: fixed;
     bottom: 0;
     top: auto;
+    left: 50%;
+    transform: translateX(-50%);
     z-index: 1002;
   }
 
